<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/white"
    android:id="@+id/constraintLayout">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.MapFragment"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="0dp" />

    <TextView
        android:id="@+id/emptyView"
        android:padding="15dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#FFFFFF"
        android:visibility="gone"
        tools:text="No masterBanksList found"
        app:layout_constraintLeft_toLeftOf="@+id/map"
        app:layout_constraintRight_toRightOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintBottom_toBottomOf="@+id/map" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_constraintTop_toTopOf="@+id/map"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintLeft_toLeftOf="@+id/map"
        app:layout_constraintRight_toRightOf="@+id/map" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="14dp"
        android:alpha="0.8"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="-37dp"
        tools:layout_editor_absoluteY="550dp">

        <ImageView
            android:id="@+id/packagingBanks"
            android:tag="packging banks"
            android:layout_width="42dp"
            android:layout_height="41dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/packaging_banks"
            android:onClick="onClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:srcCompat="@drawable/ic_packaging" />

        <ImageView
            android:id="@+id/paperBanks"
            android:tag="paper banks"
            android:layout_width="50dp"
            android:layout_height="41dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/paper_banks"
            android:onClick="onClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/packagingBanks"
            app:layout_constraintRight_toLeftOf="@+id/textileBanks"
            app:srcCompat="@drawable/ic_newspaper" />

        <ImageView
            android:id="@+id/textileBanks"
            android:tag="textile banks"
            android:layout_width="46dp"
            android:layout_height="41dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/textile_banks"
            android:onClick="onClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_textiles" />

        <ImageView
            android:id="@+id/bottleBanks"
            android:tag="glass banks"
            android:layout_height="41dp"
            android:layout_width="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/bottle_banks"
            android:onClick="onClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintLeft_toRightOf="@+id/textileBanks"
            app:layout_constraintRight_toLeftOf="@+id/cansBooksFoodBins"
            app:srcCompat="@drawable/ic_glass_banks"
             />

        <ImageView
            android:id="@+id/cansBooksFoodBins"
            android:tag="cans books food banks"
            android:layout_width="42dp"
            android:layout_height="41dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:contentDescription="@string/can_banks_book_banks_food_banks"
            android:onClick="onClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_ghost_eyes_toside" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>